fix: remove scrollbar on trainings for firefox

--- a/src/styles/training-table-with-buttons.css
+++ b/src/styles/training-table-with-buttons.css
@@ -7,6 +7,7 @@
   transition: 0.15s ease-out;
   scroll-snap-type: x mandatory;
   overflow-x: scroll;
+  scrollbar-width: none;
 }
 
 ::-webkit-scrollbar {
